--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -1,32 +1,35 @@
 ---------------------------------------------------------------------------------------------------
+Version: 999.999.999
+Date: 9999-99-99
+---------------------------------------------------------------------------------------------------
 Version: 1.0.5
-Date: 17. 10. 2021
+Date: 2021-10-17
   Features:
     - Construction planner tool now has a hotkey (default Alt + C)
     - Auto-approval mod setting now has a toolbar shortcut and a hotkey (default Shift + Alt + C)
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.4
-Date: 09. 10. 2021
+Date: 2021-10-09
   Bugfixes:
     - Fixed an issue with copying/blueprinting of ghost circuit connection data
     - Fixed a compatibility issue between this mod and the Creative Mod instant blueprint feature
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.3
-Date: 05. 10. 2021
+Date: 2021-10-05
   Bugfixes:
     - Fixed a crash introduced by the previous version
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.2
-Date: 04. 10. 2021
+Date: 2021-10-04
   Bugfixes:
     - Hand-placing assemblers, etc. on top of unapproved ghosts will now preserve the ghost recipe, same as vanilla ghosts
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.1
-Date: 02. 10. 2021
+Date: 2021-10-02
   Bugfixes:
     - Ghosts from destroyed entities are now ignored by the approval tool (they will be rebuilt without approval)
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.0
-Date: 01. 10. 2021
+Date: 2021-10-01
   Other:
     - First mod release!
