Fix crash with missing unapproved ghost force when requesting deconstruction:
- Currently the code tries to be opportunistic with initialisation of
  unapproved ghost force, and some extra care needs to be taken when
  invoking functions with the said force.
- Try to reference the unapproved ghost force by using get-or-create
  pattern instead of relying on simple name conversion. This should
  guarantee the force exists.
- Long-term it would be worth it to clean-up this part of the code and
  have the ghost force initialised when players join or forces get
  created.

--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -4,6 +4,7 @@ Date: 9999-99-99
   Changes:
   Features:
   Bugfixes:
+    - Fixed crash when requesting deconstruction at beginning of the game (when unapproved ghost force has not been created yet).
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 2022-07-19
