Fix potential crash when player invokes undo on ghost deconstruction:
- Might happen when cursor stack is empty - it would still be valid,
  but not for reading.
- Use valid_for_read to ensure that name from the cursor_stack can be
  read.

--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -4,6 +4,7 @@ Date: 9999-99-99
   Changes:
   Features:
   Bugfixes:
+    - Prevent crash when undoing ghost placement if player is not holding anything in hand.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.1
 Date: 2022-07-30
