Fix rocks, trees, and cliffs being marked for deconstruction by cut-and-paste tool:
- Helper deconstruction planner must be set-up to ignore trees and
  rocks - primarily for use with cut-and-paste.
- In case of cliffs, we resort to undoing deconstruction (since we
  cannot easily black-list them in one go).
- Migration should cover older saves where the deconstruction planner
  has not been set-up to black-list trees and rocks already.

--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -4,7 +4,9 @@ Date: 9999-99-99
   Changes:
   Features:
   Bugfixes:
-    - Prevent crash when undoing ghost placement if player is not holding anything in hand.
+    - Fixed crash when undoing ghost placement if player is not holding anything in hand.
+    - Fixed deconstruction of landscape (trees, rocks, cliffs) when using cut-and-paste.
+    - Fixed uncancelable deconstruction requests when using cut-and-paste tool or deconstruction planner.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.1
 Date: 2022-07-30
