Fix underground belts getting wrong rotation/getting reversed:
- Vanilla game has some special in-game logic for dealing with this,
  but it does not handle it properly when we switch forces for an
  entity. It will reverse the belt when force is switched for
  underground belt that connects to an existing ghost.
- Try to also keep in sync belts from regular force with the
  unapproved ones.

--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -4,6 +4,7 @@ Date: 9999-99-99
   Changes:
   Features:
   Bugfixes:
+    - Fixed unapproved underground belts reversing when connecting to existing (approved/unapproved) underground belts.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.2
 Date: 2022-07-30
