Fix deconstruction planner handling:
- Previous code would result in cliffs and fish being marked for
  deconstruction by unapproved ghost force (by mistake).
- Try to detect deconstruction planners that come from the player's
  library. The check is 100% safe, but I _think_ it should be fine.
- Show warning message to players when they use deconstruction
  planners from game/player library.
- If player is (hopefully) still holding deconstruction planner in
  hand upon issuing the deconstruction order, use that one for
  deconstructing entities of unapproved ghost force - this effectively
  applies player-configured filtering.

--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -5,6 +5,8 @@ Date: 9999-99-99
   Features:
   Bugfixes:
     - Fixed unapproved underground belts reversing when connecting to existing (approved/unapproved) underground belts.
+    - Fixed deconstruction planner handling to avoid marking wrong entities for deconstruction (cliffs, fish, filtered entities if deconstruction planne is used from inventory).
+    - Fixed deconstruction planner handling to avoid creating uncancelable deconstruction orders for the unapproved ghost force.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.2
 Date: 2022-07-30
