Fix missing entities in blueprints when copying mix of approved and unapproved ghosts:
- Make sure to use the table_size function when dealing with possibly
  sparse arrays.
- Problem is reproducible with one unapproved and two approved ghosts,
  but can happen for higher numbers/ratios, just not sure what the
  pattern is.
- Use if/elseif for updating blueprints to avoid accidental double run
  of blueprint adjustment.

--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -8,6 +8,7 @@ Date: 9999-99-99
     - Fixed unapproved underground belts reversing when connecting to existing (approved/unapproved) underground belts.
     - Fixed deconstruction planner handling to avoid marking wrong entities for deconstruction (cliffs, fish, filtered entities if deconstruction planne is used from inventory).
     - Fixed deconstruction planner handling to avoid creating uncancelable deconstruction orders for the unapproved ghost force.
+    - Fixed issue where copying/blueprinting a mix of approved ghosts and unapproved ghosts would in some cases result in unapproved ghosts being dropped from the resulting blueprint.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.2
 Date: 2022-07-30
