--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -5,6 +5,7 @@ Date: 9999-99-99
   Features:
   Bugfixes:
     - Fix underground belts pairing-up (for rotation/direction purposes) with orthogonal counterparts.
+    - Fix underground belt not pairing-up correctly with existing unapproved underground belts.
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.0
 Date: 2022-07-31
