--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -4,8 +4,8 @@ Date: 9999-99-99
   Changes:
   Features:
   Bugfixes:
-    - Fix underground belts pairing-up (for rotation/direction purposes) with orthogonal counterparts.
-    - Fix underground belt not pairing-up correctly with existing unapproved underground belts.
+    - Fixed underground belts pairing-up (for rotation/direction purposes) with orthogonal counterparts.
+    - Fixed underground belt not pairing-up correctly with existing unapproved underground belts.
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.0
 Date: 2022-07-31
