Add support for rotating underground belts from complemental forces:
- Vanilla game underground pairing of same-force belts is preferred.
- Sometimes the selection of paired underground belts could look
  weird.

--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -3,6 +3,7 @@ Version: 999.999.999
 Date: 9999-99-99
   Changes:
   Features:
+    - Unapproved underground belts and their non-unapproved counterparts can now be rotated together, with some caveats in logic.
   Bugfixes:
     - Fixed underground belts pairing-up (for rotation/direction purposes) with orthogonal counterparts.
     - Fixed underground belt not pairing-up correctly with existing unapproved underground belts.
