Fixed handling of deconstruction canceling:
- Locate invalid placeholders that might be in vicinity if entity that
  had its deconstruction order canceled, and get rid of them.
- Drop the placeholders if the player ever manages to place them in
  any manner (primarily as result of the undo action).

--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -4,6 +4,8 @@ Date: 9999-99-99
   Changes:
   Features:
   Bugfixes:
+    - Fixed placeholders staying behind when canceling deconstruction of entities that do not overlap with the placeholder entity itself.
+    - Fixed undo queue with unapproved ghosts not being preserved correctly when canceling deconstruction.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.0
 Date: 2022-08-03
