--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 999.999.999
+Date: 9999-99-99
+  Changes:
+  Features:
+  Bugfixes:
+---------------------------------------------------------------------------------------------------
 Version: 1.3.1
 Date: 2022-08-07
   Bugfixes:
