Fix blueprint entity duplication due to blueprinting of friendly force entities:
- New functionality was added to Factorio 1.1.86 that allows for
  blueprinting of allied force entities, thus it is no longer needed
  to do additional blueprint entity manipulations in the code.
- This could render the placeholders useless, but there could be some
  edge cases, particularly around the use of deconstruction planner
  and cutting (as opposed to copying). For now, keep them intact to
  reduce the chances of other breakage.
- Bump the minimum base game version (just in case).

--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -4,6 +4,7 @@ Date: 9999-99-99
   Changes:
   Features:
   Bugfixes:
+    - Fixed entity duplication when blueprinting unapproved ghosts (due to changes introduced in Factorio 1.1.86).
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.0
 Date: 2022-10-19
