Added workaround for requester chest "Request from buffer chests" option not getting preserved:
- This is most likely a bug in Factorio game engine itself. Issues has
  been reported upstream:

  https://forums.factorio.com/viewtopic.php?f=7&t=114099

--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -4,6 +4,7 @@ Date: 9999-99-99
   Changes:
   Features:
   Bugfixes:
+    - Workaround for "Request from buffer chests" option not getting preserved during approvals/unapprovals (vanilla bug/behaviour).
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.0
 Date: 2024-06-24
