Switched back to development version.

--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 999.999.999
+Date: 9999-99-99
+  Changes:
+  Features:
+  Bugfixes:
+---------------------------------------------------------------------------------------------------
 Version: 3.0.1
 Date: 2024-06-30
   Bugfixes:
