--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -4,6 +4,7 @@ Date: 9999-99-99
   Changes:
     - Dropped support for game version 1.1.
     - Deconstruction planners from library are now fully supported for deconstructing unapproved ghosts.
+    - Default control for construction planner has been changed to SHIFT + C to avoid collision with vanilla copper wire connection mode one.
   Features:
     - Added support for game version 2.0.
   Bugfixes:
