--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -5,6 +5,7 @@ Date: 9999-99-99
     - Dropped support for game version 1.1.
     - Deconstruction planners from library are now fully supported for deconstructing unapproved ghosts.
     - Default control for construction planner has been changed to SHIFT + C to avoid collision with vanilla copper wire connection mode one.
+    - Auto-approval is now by default enabled in the player settings. Previously it was disabled. This should reduce confusion for new mod users. Setting can still be changed and toggled via shortcut as in previous versions.
   Features:
     - Added support for game version 2.0.
   Bugfixes:
