Fixed missing recipes in machines for unapproved ghosts force:
- Keep the technologies in sync to ensure that player will see same
  set of recipes available in the machines.
- Will not work correctly with cases where mods unlock recipes
  manually (no event gets triggered for that one).

--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -4,6 +4,7 @@ Date: 9999-99-99
   Changes:
   Features:
   Bugfixes:
+    - Fixed missing recipes in machines for unapproved ghost force.
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.1
 Date: 2024-10-27
