Fixed removal of tiles when created blueprints include unapproved ghosts:
- Refactor the code to use the new property that is passed in into the
  event for fetching the blueprint that should be configured.
- Drop the deconstruction planner known issue - this has been resolved
  thanks to modding API changes in 2.0.

--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -4,6 +4,7 @@ Date: 9999-99-99
   Changes:
   Features:
   Bugfixes:
+    - Fixed tiles getting removed from created/updated blueprints when using unapproved ghosts.
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.4
 Date: 2024-11-01
