Added removal of built unapproved ghost entity placeholders to the clean-up command:
- This should really not happen in the first place, and although it
  was reported as happening, it is not quite clear what causes
  it. Possibly happens in combination with the Blueprint Sandboxes
  mod (or mods that do some kind of revivals in general).

--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -3,6 +3,7 @@ Version: 999.999.999
 Date: 9999-99-99
   Changes:
   Features:
+    - The /cp_cleanup command now removes all built unapproved ghost entity placeholders. Unapproved ghost entity placeholders getting built in the first place should be considered a bug. Reproduction steps are welcome.
   Bugfixes:
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.5
