Switched back to development version.

--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 999.999.999
+Date: 9999-99-99
+  Changes:
+  Features:
+  Bugfixes:
+---------------------------------------------------------------------------------------------------
 Version: 4.0.7
 Date: 2025-02-22
   Bugfixes:
