Renamed the mod in order to avoid confusion with the original Construction Planner:
- There has been some uptick in activity in development of the
  original mod, so it might be helpful to differentiate between the
  two a bit more to avoid confusion.
- Updated the thumbnail with a custom SVG icon representing road
  construction barrier.
- Renamed the helper command while at it as well.
- Updated the readme file, dropping some outdated references and
  improving wording in a couple of places.

--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -2,6 +2,9 @@
 Version: 999.999.999
 Date: 9999-99-99
   Changes:
+    - Renamed mod in order to avoid confusion with the original Construction Planner by ceresward, which has seen active development for Factorio 2.0. Take note that the two code 
+bases have diverged at this point.
+    - Renamed /cp_cleanup command to /ca_cleanup (for naming consistency).
   Features:
   Bugfixes:
 ---------------------------------------------------------------------------------------------------
