Improve performance and drop work-arounds for blueprint book handling:
- Blueprint books have had their content available from the get-go,
  it is just not as clearly named as in case of blueprint books from
  library.
- The modding API now exposes the active index for blueprint book
  records, so we can drop traversing every single blueprint in a book
  to get the maximum possible size.

--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -6,7 +6,7 @@ Date: 9999-99-99
 bases have diverged at this point.
     - Renamed /cp_cleanup command to /ca_cleanup (for naming consistency).
   Features:
-  Bugfixes:
+    - Improved performance when using blueprint books from inventory or blueprint library.
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.7
 Date: 2025-02-22
