Fixed infinite game loop/freeze when researching multi-level technologies:
- Has something to do with setting the technology leves, which seems
  to result in a larger than expected sequence of researched/reversed
  events being triggered. Possibly a bug (or just a quirk) of the game
  engine.

--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -4,6 +4,7 @@ Date: 9999-99-99
   Changes:
   Features:
   Bugfixes:
+    - Fixed infinite game loop/freeze when researching technologies with (infinite) levels.
 ---------------------------------------------------------------------------------------------------
 Version: 5.1.0
 Date: 2025-03-29
